plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.9'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    // WEbSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    // OAuth2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // rest api를 사용할 수 있게함
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // prometheus
    implementation 'io.micrometer:micrometer-registry-prometheus' // Prometheus 연동을 위한 Micrometer 의존성
    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    // H2
    runtimeOnly 'com.h2database:h2'
    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'
    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    // 유효성 검사 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    // ModelMapper 라이브러리
    implementation 'org.modelmapper:modelmapper:3.1.1'
    // ⭐ Spring boot 3.x이상에서 QueryDsl 패키지를 정의하는 방법
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    implementation 'com.querydsl:querydsl-apt'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // guava
    implementation 'com.google.guava:guava:32.1.2-jre'
    // S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    // slack: webhook
    implementation("net.gpedro.integrations.slack:slack-webhook:1.4.0")
    implementation 'com.slack.api:slack-api-client:1.28.0'
    implementation 'com.slack.api:slack-app-backend:1.28.0'
    implementation 'com.slack.api:slack-api-model:1.28.0'
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // micrometer
    implementation 'io.micrometer:micrometer-core'
    implementation("org.springframework.boot:spring-boot-starter-aop")
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}

clean {
    delete file('src/main/generated')
}

tasks.withType(Test) {
    // MeettifyApplicationTests 테스트만 제외
    exclude '**/MeettifyApplicationTests*'
}

springBoot {
    buildInfo()
}